# satellite-change-detection

./: .gitignore  CMakeLists.txt  PROJECT_REPORT.md  README.md  ez.in  secrets.md
SatelliteApp/: .gitignore  README.md  app.json  google-services.json  package-lock.json  package.json
SatelliteApp/service/: notifications.ts
SatelliteApp/src/: types.ts  utils.ts
SatelliteApp/src/app/: _layout.tsx  alerts.tsx  change-map.tsx  index.tsx  types.ts  utils.ts
SatelliteApp/src/components/: AlertCard.tsx  ClassificationBar.tsx  NdviGrid.tsx
SatelliteApp/src/service/: api.ts  notifications.ts
alert-service/: .gitignore  README.md  pom.xml
alert-service/src/main/resources/: application.yml
api-gateway/: README.md  pom.xml
api-gateway/src/main/resources/: application.yml
change-detection-service/: README.md  pom.xml
change-detection-service/src/main/resources/: application.properties  application.yml
classification-service/: .gitignore  README.md  gee_fetch.py  main.py  pyproject.toml
classification-service/app/: main.py
classification-service/app/api/endpoints/: classify.py  gee.py
classification-service/app/core/: config.py
classification-service/app/schemas/: classify_schema.py  gee_schema.py
classification-service/app/services/: classifier.py  gee_service.py
classification-service/example/: example_result.json
classification-service/model/: train_model.py
data-service/: README.md  pom.xml
data-service/src/main/resources/: application.yml
infra/docker/: docker-compose.yml  init.sql
ingestion-service/: README.md  pom.xml
(+64 files in other folders)
